--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ html, body {
   background-position: center;
   background-repeat: no-repeat;
   width: 100%;
-  height: 30%;
+  height: 20%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -47,23 +47,102 @@ html, body {
   font-size: 15px;
 }
 
-.translate h1 {
+.container h1, h2 {
   color: #035A9D;
   text-align: center;
-  font-size: 100%;
+  font-size: 125%;
 }
 
-.input {
-  background-color: #EFF0F4;
-  border: #035A9D;
-  text-align: center;
+.container h2 {
+  margin-top: 30px;
+}
 
+.container {
+  margin: 20px auto;
+  padding: 30px;
+  width: 400px;
+  background: white;
+  border: 4px solid #252F42;
+  border-radius: 15px; /* Rounded corners */
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Soft shadow */
+  text-align: center;
+  height: 450px;
 }
 
 input[type="text"] {
-  padding:
-  font-size:
+  padding: 15px;
+  font-size: 1rem;
   border: 1px solid #ccc;
+  border-radius: 10px;
+  width: 100%;
+  background-color: #EFF0F4;
+  box-sizing: border-box;
+  height: 150px;
+}
+
+input[type="text"]::placeholder {
+  color: #333333;
+  font-weight: bold;
+  font-family: Poppins;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 30px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+
+}
+
+.title {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #1b2735;
+  margin-bottom: 20px;
+}
+
+.language-option {
+  margin: 10px 0; /* Vertical spacing between options */
+  color: #333333;
+  font-weight: bold;
+  font-size: 20px;
+  font-family: Poppins;
+  display: flex;
+  align-items: center; /* Vertically center the radio button with the text and flag */
+}
+
+.t-btn {
+  width: 322px;
+  height: 50px;
+  top: 652px;
+  left: 34px;
+  padding: 13px 0px 14px 0px;
+  gap: 0px;
+  border-radius: 6px 0px 0px 0px;
+  opacity: 0px;
+  color: #FFFFFF;
+  background-color: #035A9D;
   border-radius: 5px;
-  width: 300px;
+  border-color: #035A9D;
+  box-shadow: none;
+  cursor: pointer;
+  border: none;
+  margin-top: 25px;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.t-btn text {
+  width: 322px;
+  height: 23px;
+  top: 13px;
+  gap: 0px;
+  opacity: 0px;
+  font-family: Poppins;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 36px;
+  text-align: center;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: #FFFFFF;
 }
